FIXES: Set close button content to be empty to resolve duplicate close, adjusted z-index on minicart and search to resolve overlapping issues

--- a/app/design/frontend/HumanElement/stover_default/Magento_CatalogSearch/web/css/source/_module_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Magento_CatalogSearch/web/css/source/_module_extend.less
@@ -10,9 +10,9 @@
 & when (@media-common = true) {
 
     .header-search {
-        border-top: @ammenu-search-border;
+        z-index: -1;
         &.active {
-            border-bottom: @ammenu-search-border;
+            border-top: @ammenu-search-border;
         }
     }
 
